syntax = "proto3";

package v1;

import "google/protobuf/timestamp.proto";

// Artifacts store access specification
message ArtifactsStore {
    // UUID
    string uuid = 1;

    // Name
    string name = 2;

    // Optional description
    string description = 3;

    // Optional Tags of this entity
    repeated string tags = 4;

    // Optional time when the entityt was created
    google.protobuf.Timestamp created_at = 5;

    // Optional last time the entity was updated
    google.protobuf.Timestamp updated_at = 6;

    // Optional a flag to freeze the store
    bool frozen = 7;

    // Optional a flag to disable the store
    bool disabled = 8;

    // Optional if the entity has been deleted
    bool deleted = 9;

    // Optional the k8s secret to use
    string k8s_secret = 10;

    // Optional type of the store
    string type = 11;

    // Optional mounth path
    string mount_path = 12;

    // Optional host path
    string host_path = 13;

    // Optional volume claim
    string volume_claim = 14;

    // Optional bucket
    string bucket = 15;

    // Optional flag to set this store to read only mode
    bool read_only = 16;
}

 // Request data to create/update artifacts store
 message ArtifactsStoreBodyRequest {
    // Owner of the namespace
    string owner = 1;

    // Artifact store body
    ArtifactsStore artifact_store = 2;
 }


// Contains list artifacts stores
message ListArtifactsStoresResponse {
    // Count of the entities
    int32 count = 1;

    // List of all entities
    repeated ArtifactsStore results = 2;

    // Previous page
    string previous = 3;

    // Next page
    string next = 4;
}

// Artifact tree response
message ArtifactTreeResponse {
    map<string, int64> files = 1;
    repeated string dirs = 2;
    bool is_done = 3;
}
